# win-nlp-control

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: config.rs  debug_logger.rs  intent_mapper.rs  language.rs  lib.rs  main.rs  nlp.rs  task_scheduler.rs  winui_controller.rs
src/core/: config.rs  intent.rs  language.rs  nlp.rs
src/platform/windows/: controller.rs  winapi.rs
src/task/: executor.rs  model.rs  scheduler.rs
src/webapi/: handlers.rs  models.rs
