[package]
name = "winui-automation"
version = "0.1.0"
edition = "2021"

[features]
default = ["enable_win32"]
enable_win32 = [
    "windows",
]

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
regex = "1"
lazy_static = "1"
rust-stemmers = "1"
serde_derive = "1.0.166"
notify = "6.1.1"
uuid = { version = "1.4.1", features = ["serde", "v4"] }
env_logger = "0.10"
log = "0.4"

# Add image crate for screenshot feature
image = "0.24.7"

# Add windows crate (re-exporting subset)
windows = { version = "*", optional = true, features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Clipboard",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_Graphics_Gdi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
]}
